# Pushgram_2.0

./: README.md  databases.py  doctrans.py  main.py  pyproject.toml  requirements.txt  telegram-trans.db
.github/workflows/: build-apk-artifact.yml  cache-restore.yml  database-config.yml  mobile-apk-setup.yml  source-config.yml
src/: pyproject.toml
