[project]
name = "pushgram app"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "flet==0.25.1",
  "deep_translator==1.11.4",
  "requests==2.32.3",
  "PyPDF2==3.0.1"
]


[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "pushgram app"

# company name to display in about app dialogs
company = "Aigus Group"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2024 by Flet"

[tool.flet.app]
path = "src"
module = "main"
exclude = ["assets"]


[tool.flet.compile]
app = false
packages = false
cleanup = false






